<resources>
    <string name="app_name">EscalaApp</string>
    <string name="login_user">User</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="log_in_facebook">LOGIN WITH FACEBOOK</string>
    <string name="tab_gyms">Gyms</string>
    <string name="tab_competitions">Competitions</string>
    <string name="tab_climbers">Climbers</string>
    <string name="climber_profile_results">Results</string>
    <string name="climber_profile_results_top_results">Top Results</string>
    <string name="climber_profile_results_all_time">All Time</string>
    <string name="climber_profile_results_months_12">Last 12 Months</string>
    <string name="gym_profile_podiums">Podiums</string>
    <string name="gym_profile_members">Members</string>
    <string name="gym_profile_host">Host</string>
    <string name="gym_profile_competitions">Competitions</string>
    <string name="gym_competitions_final_results">Final Results</string>
    <string name="competitions_results_general">General</string>
    <string name="competitions_results_finals">Finals</string>
    <string name="competitions_results_semifinals">SemiFinals</string>
    <string name="competitions_results_qualifications">Qualifications</string>
    <string name="competitions_ended">Ended</string>
    <string name="competitions_live">Live</string>
    <string name="competitions_comingup">Coming Up</string>
    <string name="competitions_comingup_more_info">More</string>
    <string name="competitions_comingup_register">Register</string>
    <string name="competitions_live_results">Live Results</string>
    <string name="settings_notifications">NOTIFICACTIONS</string>
    <string name="settings_invite_friend">INVITE A FRIEND</string>
    <string name="settings_contact">CONTACT</string>
    <string name="settings_help">HELP</string>
    <string name="settings_add_gym">¿Do you own a gym?</string>
    <string name="settings_gym_profile">GYM PROFILE</string>
    <string name="settings_gym_create_competition">CRATE A COMPETITION</string>
    <string name="settings_gym_help">GYM HELP</string>
    <string name="new_comp_add_judges">Add Judges</string>
    <string name="new_comp_add_climbers">Register Climbersa</string>
    <string name="new_comp_done">DONE</string>
    <string name="competition_judge">Judge</string>
    <string name="competition_judge_climber_id">Climber ID</string>
    <string name="competition_judge_add_try">Add Try</string>
    <string name="competition_judge_add_bonus">BONUS</string>
    <string name="competition_judge_add_top">TOP</string>
    <string name="competition_judge_add_climber_id">Add ID</string>
    <string name="competition_judge_start">Start</string>
    <string name="competition_judge_stop">Stop</string>
    <string name="competition_judge_undo">Undo</string>
    <string name="hint_search">Search climbers</string>
    <string name="hint_login">sacevesc@gmail.com</string>
    <string name="notification_judge_invitation">asked you to be a judge at</string>
    <string name="notification_judge_invitation_accept">¿Accept?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="competitions_ended_results">Results</string>
    <string name="descripcion_prueba">Esta es una prueba del perfil de un escaldor haber cuantas palabras se escriben y que no se vea tan mal,
        asi que aqui va otra y una mas asi es que no lo hay gracias a la comida de mañana sera un nuevo dia .</string>
    <string-array name="round">
        <item>Qualifications</item>
        <item>Final</item>
        <item>Semifinal</item>
    </string-array>
    <string-array name="ciudades">
        <item> Ciudad de México</item>
        <item> Aguascalientes </item>
        <item> Ensenada</item>
        <item> Mexicali </item>
        <item> Tijuana </item>
        <item> La Paz </item>
        <item>Los Cabos</item>
        <item>	Campeche	</item>
        <item>	Ciudad del Carmen	</item>
        <item>	Saltillo	</item>
        <item>	Monclova-Frontera	</item>
        <item>	La Laguna	</item>
        <item>	Piedras Negras	</item>
        <item>	Tecomán	</item>
        <item>	Colima-Villa de Álvarez	</item>
        <item>	Manzanillo	</item>
        <item>	Tuxtla Gutiérrez	</item>
        <item>	Tapachula	</item>
        <item>	Chihuahua	</item>
        <item>	Juárez	</item>
        <item>	Valle de México	</item>
        <item>	Durango	</item>
        <item>	Celaya	</item>
        <item>	Guanajuato	</item>
        <item>	Irapuato	</item>
        <item>	León	</item>
        <item>	La Piedad-Pénjamo	</item>
        <item>	San Francisco del Rincón	</item>
        <item>	Salamanca	</item>
        <item>	Acapulco	</item>
        <item>	Chilpancingo	</item>
        <item>	Tula	</item>
        <item>	Tulancingo	</item>
        <item>	Pachuca	</item>
        <item>	Guadalajara	</item>
        <item>	Ocotlán	</item>
        <item>	Puerto Vallarta	</item>
        <item>	Toluca	</item>
        <item>	Zamora-Jacona	</item>
        <item>	Morelia	</item>
        <item>	Uruapan	</item>
        <item>	Cuautla	</item>
        <item>	Cuernavaca	</item>
        <item>	Tepic	</item>
        <item>	Monterrey	</item>
        <item>	Oaxaca	</item>
        <item>	Tehuantepec-Salina Cruz	</item>
        <item>	Puebla-Tlaxcala	</item>
        <item>	Tehuacán	</item>
        <item>	Querétaro	</item>
        <item>	San Juan del Río	</item>
        <item>	Cancún	</item>
        <item>	Chetumal	</item>
        <item>	Rioverde-Ciudad Fernández	</item>
        <item>	San Luis Potosí-Soledad	</item>
        <item>	Los Mochis	</item>
        <item>	Culiacán	</item>
        <item>	Mazatlán	</item>
        <item>	Ciudad Obregón	</item>
        <item>	Guaymas	</item>
        <item>	Hermosillo	</item>
        <item>	Cárdenas	</item>
        <item>	Villahermosa	</item>
        <item>	Tampico-Pánuco	</item>
        <item>	Matamoros	</item>
        <item>	Nuevo Laredo	</item>
        <item>	Reynosa-Río Bravo	</item>
        <item>	Ciudad Victoria	</item>
        <item>	Tlaxcala-Apizaco	</item>
        <item>	Veracruz	</item>
        <item>	Córdoba	</item>
        <item>	Orizaba	</item>
        <item>	Xalapa	</item>
        <item>	Poza Rica	</item>
        <item>	Coatzacoalcos	</item>
        <item>	Minatitlán	</item>
        <item>	Mérida	</item>
        <item>	Zacatecas-Guadalupe	</item>
    </string-array>
    <string-array name="estados">
        <item>	Aguascalientes	</item>
        <item>	Baja California	</item>
        <item>	Campeche	</item>
        <item>	Coahuila de Zaragoza	</item>
        <item>	Colima	</item>
        <item>	Chiapas	</item>
        <item>	Chihuahua	</item>
        <item>	Ciudad de México </item>
        <item>	Durango	</item>
        <item>	Guanajuato	</item>
        <item>	Guerrero	</item>
        <item>	Hidalgo	</item>
        <item>	Jalisco	</item>
        <item>	México	</item>
        <item>	Michoacán de Ocampo	</item>
        <item>	Morelos	</item>
        <item>	Nayarit	</item>
        <item>	Nuevo León	</item>
        <item>	Oaxaca	</item>
        <item>	Puebla	</item>
        <item>	Querétaro	</item>
        <item>	Quintana Roo	</item>
        <item>	San Luis Potosí	</item>
        <item>	Sinaloa	</item>
        <item>	Sonora	</item>
        <item>	Tabasco	</item>
        <item>	Tamaulipas	</item>
        <item>	Tlaxcala	</item>
        <item>	Veracruz de Ignacio de la Llave	</item>
        <item>	Yucatán	</item>
        <item>	Zacatecas	</item>
    </string-array>
    <string-array name="array_boulders">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="muros">
        <item>Rocódromo Ameyalli</item>
        <item>Motion Boulder</item>
        <item>Mantis</item>
        <item>Bloc-e</item>
    </string-array>
    <string name="title_activity_prueb">ActivityPRUEBA</string>
</resources>