<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="mx.iteso.escalaapp.ActivityLogin">

    <TextView
        android:id="@+id/activity_login_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_dp"
        android:layout_marginBottom="@dimen/ten"
        android:layout_weight="2.7"
        android:background="@color/colorGrayGreen"
        android:gravity="center|bottom"
        android:padding="@dimen/fifty"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/thirty_five_sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/activity_login_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_dp"
        android:layout_marginBottom="@dimen/ten"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginRight="@dimen/twenty"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/hint_login"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/activity_login_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_dp"
        android:layout_marginBottom="@dimen/ten"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginRight="@dimen/twenty"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/colorPrimary" />
    <Button
        android:id="@+id/activity_login_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/ten"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginRight="@dimen/twenty"
        android:layout_weight="1"
        android:background="@drawable/login_button"
        android:text="@string/log_in"
        android:textColor="@color/colorWhite" />
    <Button
        android:id="@+id/activity_login_signin_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/ten"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginRight="@dimen/twenty"
        android:layout_weight="1"
        android:background="@drawable/signin_button"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite" />
    <Button
        android:id="@+id/activity_login_facebook_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/ten"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginRight="@dimen/twenty"
        android:layout_weight="1"
        android:background="@drawable/login_button"
        android:text="@string/log_in_facebook"
        android:textColor="@color/colorWhite" />

</LinearLayout>
