<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.iteso.escalaapp.ActivityMain">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="snap|scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:id="@+id/titulo_appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/activity_main_profile"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/image_rounded_toolbar"
                    android:src="@drawable/icono_blanco" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/button_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_gyms_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.5"
                android:background="@drawable/tabs"
                android:text="@string/tab_gyms"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/main_comps_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="1"
                android:background="@drawable/tabs"
                android:text="@string/tab_competitions"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/main_climbers_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.5"
                android:background="@drawable/tabs"
                android:text="@string/tab_climbers"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_activity_main" />


</android.support.design.widget.CoordinatorLayout>
